2011-11-16  Darin Adler  <darin@apple.com>

        Specialize HashTraits for OwnPtr to use PassOwnPtr and raw pointer
        https://bugs.webkit.org/show_bug.cgi?id=72475

        Reviewed by Adam Roben.

        * wtf/HashTraits.h: Specialize HashTraits for OwnPtr.
        Do overloads so we can pass a nullptr and also be sure to get the
        raw pointer type from the OwnPtr template so we handle both forms
        of OwnPtr: OwnPtr<T> and OwnPtr<T*>.

2011-11-16  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Centralize hide_symbols and ensure all libs are built with symbol visibility & bsymbolic_functions

        Reviewed by Tor Arne Vestbø.

        * Target.pri: Eliminate duplicated symbol stuff that lives now in default_post.prf.

2011-11-16  Simon Hausmann  <simon.hausmann@nokia.com>

        Unreviewed, rolling out r100266.
        http://trac.webkit.org/changeset/100266

        Broke WTR.

        * Target.pri:

2011-11-16  Darin Adler  <darin@apple.com>

        Add a "pass type" and "peek type" concept to HashTraits
        https://bugs.webkit.org/show_bug.cgi?id=72473

        Reviewed by Filip Pizlo.

        * wtf/HashTraits.h: Added the pass type and peek type.
        For OwnPtr, the pass type will be PassOwnPtr and the peek
        type will be a raw pointer.

2011-11-16  Darin Adler  <darin@apple.com>

        Fix some hash traits that don't derive from the base hash traits
        https://bugs.webkit.org/show_bug.cgi?id=72470

        Reviewed by Filip Pizlo.

        Hash traits structures need to derive from the base hash traits in
        HashTraits.h, but some were not. This is needed for compatibility with
        some additional traits we will be adding to make OwnPtr work with HashMap.

        * runtime/Identifier.h: Make IdentifierMapIndexHashTraits derive from
        HashTraits<int>. This enabled removal of all the members except for the
        ones that control the empty value, because this is otherwise the same